# mpvwall

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  config.json  pyproject.toml
mpvwall/: __main__.py  autostart.py  config.py  filepicker.py  ipc.py  log.py  metadata.py  monitors.py  mpvpaper.py  status.py  tui.py  wallpapers.py
