[project]
name = "mpvwall"
version = "0.3.0"
description = "Terminal UI manager for mpvpaper video wallpapers"
authors = [{name="methamphetaminelab"}]
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
keywords = ["wallpaper", "mpv", "wayland", "hyprland", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/methamphetaminelab/mpvwall"
Repository = "https://github.com/methamphetaminelab/mpvwall"
Issues = "https://github.com/methamphetaminelab/mpvwall/issues"

[project.scripts]
mpvwall = "mpvwall.__main__:main"
